force-app/main/default/objects/Health_Score_Snapshot__c/Health_Score_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Health Score Snapshot</label>
    <nameField>
        <displayFormat>HS-{0000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Score Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>