force-app/main/default/objects/Health_Score_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Health Score Snapshots</relationshipLabel>
    <relationshipName>Health_Score_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>