force-app/main/default/objects/Health_Score_Snapshot__c/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <label>Churn Risk</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>