force-app/main/default/objects/Health_Score_Snapshot__c/fields/Financial_Score__c.field-meta.xml
<CustomField>
    <fullName>Financial_Score__c</fullName>
    <label>Financial Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>