force-app/main/default/objects/Health_Score_Snapshot__c/fields/Scored_On__c.field-meta.xml
<CustomField>
    <fullName>Scored_On__c</fullName>
    <label>Scored On</label>
    <required>true</required>
    <type>Date</type>
</CustomField>